--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -6,12 +6,12 @@ authors = ["er2g"]
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "2.0.4" }
+tauri-build = { version = "2.0.4", features = [] }
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri = { version = "2.1.1" }
+tauri = { version = "2.1.1", features = [] }
 
 [profile.release]
 panic = "abort"
