--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
-__pycache__/
-*.py[cod]
-*.pyd
-.Python
-.venv/
-venv/
-ENV/
-env/
-
 .env
 .env.*
 keys.txt
+.venv/
+__pycache__/
+scripts/__pycache__/
 node_modules/
 src-tauri/target/
 dist/
